--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: 1em;
     /* font-family: "roboto", "Helvetica Neue", helvetica, sans-serif; */
+    /* text-align: center; */
 }
 
 #logo {
@@ -35,9 +36,10 @@ body {
     margin-bottom: .3em;
 }
 
-/* .inputRowStyle {
-    margin-left: 3em;  figure out how to center input boxes without centering text or addind ems to left margin
-} */
+.inputRowStyle {
+    display: flex;
+    justify-content: space-around;
+}
 
 .submitBtnStyle {
     display: block;
@@ -58,6 +60,11 @@ body {
 }
 
 .inputBoxStyle {
-    width: 15em;
+    /* width: 15em; */
     height: 2.5em;
 }
+
+/* .main-container {
+    width: 960px;
+    margin: 0 auto;
+} */
