--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-size: 1em;
     /* font-family: "roboto", "Helvetica Neue", helvetica, sans-serif; */
-    /* text-align: center; */
+    /* background-color: rgba(0, 0, 0, 0.4); */
 }
 
 header {
@@ -49,6 +49,14 @@ header {
     display: block;
     margin: 0 auto;
     margin-top: 2.1em;
+    color: rgb(0, 0, 0);
+    font-weight: 500;
+    background-color: rgb(255, 217, 0);
+    border-color: rgb(255, 255, 255, .8);
+}
+
+.submitBtnStyle:hover {
+    background-color: rgb(255, 232, 101);
 }
 
 .h2Style {
@@ -65,4 +73,43 @@ header {
 
 .inputBoxStyle {
     height: 2.5em;
+}
+
+
+@media screen and (max-width: 766px) {
+    .trainSchedulerStyle {
+        height: 27em;
+    } .formContainer {
+        width: 500px;
+    }
+}
+
+
+@media screen and (max-width: 640px) {
+    table {
+        overflow-x: auto;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .trainSchedulerStyle {
+        height: 36em;
+    } .formContainer {
+        width: 300px;
+    } .labelStyle {
+        margin-top: .5em;
+        margin-bottom: .1em;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .trainSchedulerStyle {
+        height: 36em;
+    } .formContainer {
+        width: 300px;
+    } .labelStyle {
+        margin-top: .5em;
+        margin-bottom: .1em;
+    }
 }
