--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ body {
 
 header {
     color: rgba(0, 0, 0);
-    background: rgb(255, 255, 255, .8);
+    background: rgba(255, 255, 255, .8);
     padding: 1em;
     display: flex;
     justify-content:space-between; 
@@ -52,7 +52,7 @@ header {
     color: rgb(0, 0, 0);
     font-weight: 500;
     background-color: rgb(255, 217, 0);
-    border-color: rgb(255, 255, 255, .8);
+    border-color: rgba(255, 255, 255, .8);
 }
 
 .submitBtnStyle:hover {
